force-app/main/default/objects/p2s_base1__CustomerJourney__c/p2s_base1__CustomerJourney__c.object-meta.xml
<CustomObject>
    <label>Journey Summary</label>
    <nameField>
        <displayFormat>CJ.{YYYYMMDD}.{00000}</displayFormat>
        <label>Journey Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journey Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>