force-app/main/default/objects/p2s_base1__CustomerJourney__c/fields/Aware_Customer__c.field-meta.xml
<CustomField>
    <fullName>Aware_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aware - Customer</label>
    <type>Checkbox</type>
</CustomField>