force-app/main/default/objects/p2s_base1__CustomerJourney__c/fields/Inactive_Opp__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive Opp</label>
    <type>Checkbox</type>
</CustomField>