force-app/main/default/objects/p2s_base1__CustomerJourney__c/fields/Intent_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Intent_DateTime__c</fullName>
    <label>Intent DateTime</label>
    <type>DateTime</type>
</CustomField>