force-app/main/default/objects/p2s_base1__CustomerJourney__c/fields/Opp_Customer__c.field-meta.xml
<CustomField>
    <fullName>Opp_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opp - Customer</label>
    <type>Checkbox</type>
</CustomField>