force-app/main/default/objects/p2s_base1__CustomerJourney__c/fields/p2s_base1__AwareDateTime__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__AwareDateTime__c</fullName>
    <label>Aware DateTime</label>
    <type>DateTime</type>
</CustomField>