force-app/main/default/objects/p2s_base1__CustomerJourney__c/fields/p2s_base1__ClosedLostDateTime__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__ClosedLostDateTime__c</fullName>
    <label>Closed Lost DateTime</label>
    <type>DateTime</type>
</CustomField>