force-app/main/default/objects/p2s_base1__CustomerJourney__c/fields/p2s_base1__ConvertedLead__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__ConvertedLead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, this Customer Journey has gone through a Lead Conversion</description>
    <inlineHelpText>If this field is checked, this Customer Journey has gone through a Lead Conversion</inlineHelpText>
    <label>Converted Lead</label>
    <type>Checkbox</type>
</CustomField>