force-app/main/default/objects/p2s_base1__CustomerJourney__c/fields/p2s_base1__JourneyType__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__JourneyType__c</fullName>
    <label>Journey Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Journey</fullName>
            </value>
            <value>
                <fullName>Opportunity Journey</fullName>
            </value>
            <value>
                <fullName>Contact Journey</fullName>
            </value>
            <value>
                <fullName>Account Journey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>