force-app/main/default/objects/p2s_base1__CustomerJourney__c/fields/p2s_base1__Known__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Known__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Known</label>
    <type>Checkbox</type>
</CustomField>