force-app/main/default/objects/p2s_base1__CustomerJourney__c/fields/p2s_base1__MQL__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__MQL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MQL</label>
    <type>Checkbox</type>
</CustomField>