force-app/main/default/objects/p2s_base1__CustomerJourney__c/fields/p2s_base1__MQLDateTime__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__MQLDateTime__c</fullName>
    <label>MQL DateTime</label>
    <type>DateTime</type>
</CustomField>