force-app/main/default/objects/p2s_base1__CustomerJourney__c/fields/p2s_base1__NoEngagementDateTime__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__NoEngagementDateTime__c</fullName>
    <label>No Engagement DateTime</label>
    <type>DateTime</type>
</CustomField>