force-app/main/default/objects/p2s_base1__CustomerJourney__c/fields/p2s_base1__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Customer_Journeys</relationshipName>
    <type>Lookup</type>
</CustomField>