force-app/main/default/objects/p2s_base1__CustomerJourney__c/fields/p2s_base1__OpportunityCreated__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__OpportunityCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Created</label>
    <type>Checkbox</type>
</CustomField>