force-app/main/default/objects/p2s_base1__CustomerJourney__c/fields/p2s_base1__OpportunityCreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__OpportunityCreatedDateTime__c</fullName>
    <label>Opportunity Created DateTime</label>
    <type>DateTime</type>
</CustomField>