force-app/main/default/objects/p2s_base1__CustomerJourney__c/fields/p2s_base1__PreviousJourney__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__PreviousJourney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Journey Summary</label>
    <referenceTo>p2s_base1__CustomerJourney__c</referenceTo>
    <relationshipLabel>Journey Summaries</relationshipLabel>
    <relationshipName>Previous_Journeys</relationshipName>
    <type>Lookup</type>
</CustomField>