force-app/main/default/objects/p2s_base1__CustomerJourney__c/fields/p2s_base1__QualifiedOpportunityDateTime__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__QualifiedOpportunityDateTime__c</fullName>
    <label>Qualified Opportunity DateTime</label>
    <type>DateTime</type>
</CustomField>