force-app/main/default/objects/p2s_base1__CustomerJourney__c/fields/p2s_base1__VelOpenOppCustomer__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__VelOpenOppCustomer__c</fullName>
    <formula>IF( p2s_base1__CustomerDateTime__c &gt; p2s_base1__OpenOpportunityDateTime__c , p2s_base1__CustomerDateTime__c - p2s_base1__OpenOpportunityDateTime__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Velocity: Open Opp to Customer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>