force-app/main/default/objects/p2s_base1__CustomerJourney__c/fields/Win_Customer_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Win_Customer_DateTime__c</fullName>
    <label>Win - Customer DateTime</label>
    <type>DateTime</type>
</CustomField>