force-app/main/default/objects/p2s_base1__CustomerJourney__c/listViews/p2s_base1__All.listView-meta.xml
<ListView>
    <fullName>p2s_base1__All</fullName>
    <columns>NAME</columns>
    <columns>p2s_base1__Lead__c</columns>
    <columns>p2s_base1__Account__c</columns>
    <columns>p2s_base1__Contact__c</columns>
    <columns>p2s_base1__Opportunity__c</columns>
    <columns>p2s_base1__NoEngagement__c</columns>
    <columns>p2s_base1__Aware__c</columns>
    <columns>p2s_base1__MQA__c</columns>
    <columns>p2s_base1__OpenOpportunity__c</columns>
    <columns>p2s_base1__Customer__c</columns>
    <columns>p2s_base1__ConvertedLead__c</columns>
    <columns>p2s_base1__PreviousJourney__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>